<resources>
    <string name="app_name">Kukos Lokos</string>

    <string name="home">Home</string>
    <string name="saved">Guardados</string>
    <string name="profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detalles_pelicula_fragment">Fragment de detalles (Movie)</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="usuario">Usuario/Correo</string>
    <string name="sesion">INICIAR SESION</string>
    <string name="no_hay_cuenta">¿No tienes cuenta?</string>
    <string name="registrarse">REGISTRATE YA</string>
    <string name="registro">Registro</string>
    <string name="registro_finalizar">FINALIZAR</string>
    <string name="registro_cancelar">CANCELAR</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_id">Nickname</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="guardar_peli">Guardar</string>
    <string name="ruleta_girar">Girar</string>
    <string name="ruleta_titulo">RULETA DIARIA</string>
    <string name="ruleta_bienvenida">Hola de nuevo\nBuena suerte con tu tirada</string>
    <string name="correo">Correo electrónico</string>
</resources>